Implement SearchResult Page

--- a/reactApp/public/css/osahan.css
+++ b/reactApp/public/css/osahan.css
@@ -472,7 +472,7 @@ a:focus {
     text-align: center;
 }
 .offer-price {
-    color: #000;
+    color: #ee4d2d;
     font-size: 14px;
     font-weight: 600;
     line-height: 16px;
