--- a/reactApp/public/css/osahan.css
+++ b/reactApp/public/css/osahan.css
@@ -107,12 +107,26 @@ a:focus {
 .btn-secondary-sm {
   background: #f77d48 none repeat scroll 0 0 !important;
 }
-.cart-campaign-header {
-  background: #51aa1b none repeat scroll 0 0 !important;
+.cart-campaign-header h5 {
+  Color: green;
+  font-weight: 500;
+  font-size: 18px;
+  font-style: italic;
 }
 /* .cart-farm-header {
     background: #888 none repeat scroll 0 0 !important;
 } */
+.cart-farm-header h5{
+  Color: orange;
+  font-weight: 400;
+  font-size: 16px;
+  font-style: italic;
+}
+.cart-farm-header h6{
+  font-weight: 400;
+  font-size: 12px;
+  color: rgb(73, 66, 66);
+}
 .text-secondary {
   color: #e96125 !important;
 }
@@ -866,6 +880,13 @@ body.toggled::after {
   margin: 4px 0;
 }
 /* Cart Page */
+
+.cart_summary th{
+  font-weight: 300;
+  font-size: 16px;
+  border-radius: 3px;
+}
+
 .cart_product img {
      -moz-border-bottom-colors: none;
     -moz-border-left-colors: none;
@@ -881,8 +902,9 @@ body.toggled::after {
     height: 80px;
     margin: 0px;
     object-fit: cover;
-    width: 200px;
+    width: 100%;
 }
+
 .cart_summary td {
   vertical-align: middle;
 }
@@ -912,12 +934,18 @@ body.toggled::after {
   width: 27px;
 }
 .cart_description h5 {
-  font-size: 15px;
+  font-size: 14px;  
   margin: 0 0 5px;
+  font-weight: 500;
 }
 .cart_description h6 {
   font-size: 12px;
   font-weight: 100;
+}
+.total_item{
+  font-size: 14px;
+  font-weight: 500;
+  color: rgb(179, 55, 55);
 }
 .availability .badge {
   font-size: 11px;
@@ -951,11 +979,7 @@ body.toggled::after {
 .cart-table .cart-farm-header {
   border-radius: 0 !important;
   font-size: 16px;
-  text-transform: uppercase;
-}
-.cart_product {
-  width: 10%;
-}
+} 
 /* Checkout Page */
 .checkout-step .card {
   margin: 0 0 -1px;
