--- a/reactApp/public/css/osahan.css
+++ b/reactApp/public/css/osahan.css
@@ -139,6 +139,16 @@ a:focus {
   border-radius: 2px !important;
   font-size: 13px;
 }
+.btn-update-quantity {
+  border: 1px solid;
+  border-radius: 2px;
+  width: 38px;
+  height: 38px;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 1px;
+  padding-bottom: 5px;
+}
 .heading-design-h5 {
   font-size: 18px;
   margin-bottom: 14px;
