--- a/reactApp/public/css/osahan.css
+++ b/reactApp/public/css/osahan.css
@@ -1612,7 +1612,7 @@ label {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 70vh;
   background: linear-gradient(
     rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.3)
@@ -1625,6 +1625,7 @@ label {
 .get-started-page .form{
   background-color: white;
   padding: 50px 80px;
+  width: 50%;
   border-radius: 10px;
 }
 
