--- a/reactApp/public/css/dichonao.css
+++ b/reactApp/public/css/dichonao.css
@@ -1,28 +1,5 @@
 /*
-Template Name: Groci - Organic Food & Grocery Market Template
-Author: Askbootstrap
-Author URI: https://themeforest.net/user/askbootstrap
-Version: 1.3
-*/
-/*
-	-- Body 
-	-- Top Menu 
-	-- Link Menu 
-	-- Category Slider 
-	-- Main Slider 
-	-- Featured Product 
-	-- Featured Box 
-	-- Footer 
-	-- Cart Sidebar 
-	-- Shop Filters 
-	-- Shop Detail 
-	-- Cart Page 
-	-- Checkout Page 
-	-- Login Modal 
-	-- My Account 
-	-- About Page
-	-- Blog Page
-	-- Mobile Media
+DiChoNao css
 */
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900|Roboto+Condensed:300,300i,400,400i,700,700i");
 /* Body */
