--- a/reactApp/public/css/dichonao.css
+++ b/reactApp/public/css/dichonao.css
@@ -1633,6 +1633,8 @@ label {
 
 /* Get started page */
 .get-started-page {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1641,16 +1643,16 @@ label {
       rgba(255, 255, 255, 0.7),
       rgba(255, 255, 255, 0.3)
     ),
-    url("https://www.nhonmy.com/wp-content/uploads/2018/05/web-thuc-pham-sach.png");
+    url("../img/getStartedBackground.png");
   background-size: cover;
   background-position: center;
 }
 
 .get-started-page .form {
   background-color: white;
-  padding: 50px 80px;
-  width: 60%;
-  height: 80%;
+  padding: 5% 10%;
+  width: 80%;
+  height: 90%;
   border-radius: 10px;
 }
 
@@ -1667,8 +1669,8 @@ label {
 .get-started-page .btn {
   border-radius: 0 2px 2px 0 !important;
   font-weight: 500;
-  height: 38px;
-  padding: 0 21px;
+  /* height: 38px; */
+  /* padding: 0 21px; */
   text-transform: uppercase;
 }
 
